TestSuite/Verification/Error/Serial/Data-Management/out/includes/LocalAllocationTestWithInlining.hxx

/*********************************************************************/
/*        This is a generated C++ Header file.                       */
/*        Generated by PatternDSL.                                   */
/*        Contains the function declarations for the source file     */
/*********************************************************************/

#ifndef LocalAllocationTestWithInlining_HXX
#define LocalAllocationTestWithInlining_HXX

uint randomizer(int n = 42) {
    srand(n);
    return rand();
}

    int32_t test2(int32_t* input);


#endif